<resources>
    <string name="app_name">ScheduleApplication</string>

    <!--  Bottom Navigationタイトル  -->
    <string name="navigation_list">予定一覧</string>
    <string name="navigation_profile">プロフィール</string>

    <!--  AppBarタイトル  -->
    <string name="title_list">予定一覧</string>
    <string name="title_addition">予定入力</string>
    <string name="title_edit">予定編集</string>
    <string name="title_detail">予定詳細</string>
    <string name="title_profile">プロフィール</string>

    <!--  Dialog  -->
    <string name="dialog_theme_addition_hint">例）勉強、家事</string>
    <string name="dialog_theme_addition_message">追加したいテーマ名を入力してください</string>
    <string name="dialog_theme_addition_positive_button">追加</string>
    <string name="dialog_theme_addition_negative_button">キャンセル</string>
    <string name="dialog_theme_addition_warning">テーマを入力してください</string>

    <!--  hint  -->
    <string name="hint_schedule_title">タイトル</string>
    <string name="hint_schedule_detail">詳細</string>
    <string name="hint_schedule_priority">優先度</string>

    <!--  ラベル  -->
    <string name="label_schedule_edit_theme">テーマ選択</string>
    <string name="label_schedule_edit_priority">優先度選択</string>
    <string name="label_schedule_edit_timestamp">日時選択</string>
    <string name="label_schedule_detail_deadline">まで</string>

    <!--  Button  -->
    <string name="schedule_edit_save">保存</string>
    <string name="schedule_detail">詳細をみる</string>
    <string name="schedule_finish">予定達成</string>
    <string name="schedule_edit">予定を編集</string>
    <string name="schedule_delete">予定を削除</string>

</resources>